--- a/test.ipynb
+++ b/test.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -28,15 +28,26 @@
               "'Module online'"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "from src.test import *\n",
+        "from src.dna import *\n",
         "\n",
         "test()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "dna = random_dna(100)\n",
+        "assert len(dna)"
       ]
     }
   ],
