tweaks to kmers

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -12,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -28,26 +29,75 @@
               "'Module online'"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "from src.test import *\n",
-        "from src.dna import *\n",
+        "from src.dna import random_dna, get_kmers, get_kmer_counts\n",
         "\n",
         "test()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "CGCTACGACTATACTCATAAGAGCGACTTCCCGGTTACCGGGGCATCATCTTCGTGGGGCCCCTCTCTGTCCACGGCGGCCCATTGGCGAGCGAGCTGCA\n"
+          ]
+        }
+      ],
       "source": [
         "dna = random_dna(100)\n",
+        "print(dna)\n",
+        "\n",
         "assert len(dna)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['CGCT', 'GCTA', 'CTAC', 'TACG', 'ACGA', 'CGAC', 'GACT', 'ACTA', 'CTAT', 'TATA', 'ATAC', 'TACT', 'ACTC', 'CTCA', 'TCAT', 'CATA', 'ATAA', 'TAAG', 'AAGA', 'AGAG', 'GAGC', 'AGCG', 'GCGA', 'CGAC', 'GACT', 'ACTT', 'CTTC', 'TTCC', 'TCCC', 'CCCG', 'CCGG', 'CGGT', 'GGTT', 'GTTA', 'TTAC', 'TACC', 'ACCG', 'CCGG', 'CGGG', 'GGGG', 'GGGC', 'GGCA', 'GCAT', 'CATC', 'ATCA', 'TCAT', 'CATC', 'ATCT', 'TCTT', 'CTTC', 'TTCG', 'TCGT', 'CGTG', 'GTGG', 'TGGG', 'GGGG', 'GGGC', 'GGCC', 'GCCC', 'CCCC', 'CCCT', 'CCTC', 'CTCT', 'TCTC', 'CTCT', 'TCTG', 'CTGT', 'TGTC', 'GTCC', 'TCCA', 'CCAC', 'CACG', 'ACGG', 'CGGC', 'GGCG', 'GCGG', 'CGGC', 'GGCC', 'GCCC', 'CCCA', 'CCAT', 'CATT', 'ATTG', 'TTGG', 'TGGC', 'GGCG', 'GCGA', 'CGAG', 'GAGC', 'AGCG', 'GCGA', 'CGAG', 'GAGC', 'AGCT', 'GCTG', 'CTGC', 'TGCA']\n"
+          ]
+        }
+      ],
+      "source": [
+        "kmers = get_kmers(dna, 4)\n",
+        "\n",
+        "print(kmers)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'CGCT': 1, 'GCTA': 1, 'CTAC': 1, 'TACG': 1, 'ACGA': 1, 'CGAC': 2, 'GACT': 2, 'ACTA': 1, 'CTAT': 1, 'TATA': 1, 'ATAC': 1, 'TACT': 1, 'ACTC': 1, 'CTCA': 1, 'TCAT': 2, 'CATA': 1, 'ATAA': 1, 'TAAG': 1, 'AAGA': 1, 'AGAG': 1, 'GAGC': 3, 'AGCG': 2, 'GCGA': 3, 'ACTT': 1, 'CTTC': 2, 'TTCC': 1, 'TCCC': 1, 'CCCG': 1, 'CCGG': 2, 'CGGT': 1, 'GGTT': 1, 'GTTA': 1, 'TTAC': 1, 'TACC': 1, 'ACCG': 1, 'CGGG': 1, 'GGGG': 2, 'GGGC': 2, 'GGCA': 1, 'GCAT': 1, 'CATC': 2, 'ATCA': 1, 'ATCT': 1, 'TCTT': 1, 'TTCG': 1, 'TCGT': 1, 'CGTG': 1, 'GTGG': 1, 'TGGG': 1, 'GGCC': 2, 'GCCC': 2, 'CCCC': 1, 'CCCT': 1, 'CCTC': 1, 'CTCT': 2, 'TCTC': 1, 'TCTG': 1, 'CTGT': 1, 'TGTC': 1, 'GTCC': 1, 'TCCA': 1, 'CCAC': 1, 'CACG': 1, 'ACGG': 1, 'CGGC': 2, 'GGCG': 2, 'GCGG': 1, 'CCCA': 1, 'CCAT': 1, 'CATT': 1, 'ATTG': 1, 'TTGG': 1, 'TGGC': 1, 'CGAG': 2, 'AGCT': 1, 'GCTG': 1, 'CTGC': 1, 'TGCA': 1}\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "kmer_counts = get_kmer_counts(kmers)\n",
+        "\n",
+        "print(kmer_counts)"
       ]
     }
   ],
