--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 355,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -29,33 +29,33 @@
               "'Module online'"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 355,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "from src.test import *\n",
-        "from src.dna import random_dna, get_kmers, get_kmer_counts\n",
+        "from src.dna import *\n",
         "\n",
         "test()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 356,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CGCTACGACTATACTCATAAGAGCGACTTCCCGGTTACCGGGGCATCATCTTCGTGGGGCCCCTCTCTGTCCACGGCGGCCCATTGGCGAGCGAGCTGCA\n"
+            "GAGACCATACCGTTAGAAAGGATTCGGTACTGCGAGCCTG\n"
           ]
         }
       ],
       "source": [
-        "dna = random_dna(100)\n",
+        "dna = random_dna(40)\n",
         "print(dna)\n",
         "\n",
         "assert len(dna)"
@@ -63,14 +63,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 357,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['CGCT', 'GCTA', 'CTAC', 'TACG', 'ACGA', 'CGAC', 'GACT', 'ACTA', 'CTAT', 'TATA', 'ATAC', 'TACT', 'ACTC', 'CTCA', 'TCAT', 'CATA', 'ATAA', 'TAAG', 'AAGA', 'AGAG', 'GAGC', 'AGCG', 'GCGA', 'CGAC', 'GACT', 'ACTT', 'CTTC', 'TTCC', 'TCCC', 'CCCG', 'CCGG', 'CGGT', 'GGTT', 'GTTA', 'TTAC', 'TACC', 'ACCG', 'CCGG', 'CGGG', 'GGGG', 'GGGC', 'GGCA', 'GCAT', 'CATC', 'ATCA', 'TCAT', 'CATC', 'ATCT', 'TCTT', 'CTTC', 'TTCG', 'TCGT', 'CGTG', 'GTGG', 'TGGG', 'GGGG', 'GGGC', 'GGCC', 'GCCC', 'CCCC', 'CCCT', 'CCTC', 'CTCT', 'TCTC', 'CTCT', 'TCTG', 'CTGT', 'TGTC', 'GTCC', 'TCCA', 'CCAC', 'CACG', 'ACGG', 'CGGC', 'GGCG', 'GCGG', 'CGGC', 'GGCC', 'GCCC', 'CCCA', 'CCAT', 'CATT', 'ATTG', 'TTGG', 'TGGC', 'GGCG', 'GCGA', 'CGAG', 'GAGC', 'AGCG', 'GCGA', 'CGAG', 'GAGC', 'AGCT', 'GCTG', 'CTGC', 'TGCA']\n"
+            "['GAGA', 'AGAC', 'GACC', 'ACCA', 'CCAT', 'CATA', 'ATAC', 'TACC', 'ACCG', 'CCGT', 'CGTT', 'GTTA', 'TTAG', 'TAGA', 'AGAA', 'GAAA', 'AAAG', 'AAGG', 'AGGA', 'GGAT', 'GATT', 'ATTC', 'TTCG', 'TCGG', 'CGGT', 'GGTA', 'GTAC', 'TACT', 'ACTG', 'CTGC', 'TGCG', 'GCGA', 'CGAG', 'GAGC', 'AGCC', 'GCCT', 'CCTG']\n"
           ]
         }
       ],
@@ -82,14 +82,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 358,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'CGCT': 1, 'GCTA': 1, 'CTAC': 1, 'TACG': 1, 'ACGA': 1, 'CGAC': 2, 'GACT': 2, 'ACTA': 1, 'CTAT': 1, 'TATA': 1, 'ATAC': 1, 'TACT': 1, 'ACTC': 1, 'CTCA': 1, 'TCAT': 2, 'CATA': 1, 'ATAA': 1, 'TAAG': 1, 'AAGA': 1, 'AGAG': 1, 'GAGC': 3, 'AGCG': 2, 'GCGA': 3, 'ACTT': 1, 'CTTC': 2, 'TTCC': 1, 'TCCC': 1, 'CCCG': 1, 'CCGG': 2, 'CGGT': 1, 'GGTT': 1, 'GTTA': 1, 'TTAC': 1, 'TACC': 1, 'ACCG': 1, 'CGGG': 1, 'GGGG': 2, 'GGGC': 2, 'GGCA': 1, 'GCAT': 1, 'CATC': 2, 'ATCA': 1, 'ATCT': 1, 'TCTT': 1, 'TTCG': 1, 'TCGT': 1, 'CGTG': 1, 'GTGG': 1, 'TGGG': 1, 'GGCC': 2, 'GCCC': 2, 'CCCC': 1, 'CCCT': 1, 'CCTC': 1, 'CTCT': 2, 'TCTC': 1, 'TCTG': 1, 'CTGT': 1, 'TGTC': 1, 'GTCC': 1, 'TCCA': 1, 'CCAC': 1, 'CACG': 1, 'ACGG': 1, 'CGGC': 2, 'GGCG': 2, 'GCGG': 1, 'CCCA': 1, 'CCAT': 1, 'CATT': 1, 'ATTG': 1, 'TTGG': 1, 'TGGC': 1, 'CGAG': 2, 'AGCT': 1, 'GCTG': 1, 'CTGC': 1, 'TGCA': 1}\n"
+            "{'GAGA': 1, 'AGAC': 1, 'GACC': 1, 'ACCA': 1, 'CCAT': 1, 'CATA': 1, 'ATAC': 1, 'TACC': 1, 'ACCG': 1, 'CCGT': 1, 'CGTT': 1, 'GTTA': 1, 'TTAG': 1, 'TAGA': 1, 'AGAA': 1, 'GAAA': 1, 'AAAG': 1, 'AAGG': 1, 'AGGA': 1, 'GGAT': 1, 'GATT': 1, 'ATTC': 1, 'TTCG': 1, 'TCGG': 1, 'CGGT': 1, 'GGTA': 1, 'GTAC': 1, 'TACT': 1, 'ACTG': 1, 'CTGC': 1, 'TGCG': 1, 'GCGA': 1, 'CGAG': 1, 'GAGC': 1, 'AGCC': 1, 'GCCT': 1, 'CCTG': 1}\n"
           ]
         }
       ],
@@ -99,6 +99,117 @@
         "\n",
         "print(kmer_counts)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 359,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
+            "after:     (THADRYAN)TATACACACTTAGCAAGTTACGTTTCTTAT\n",
+            "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
+            "after:     GCAAGAACTATATACACACTTAGCAAGTTA(THADRYAN)\n",
+            "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
+            "after:     GCAAGAACTATATAC(THADRYAN)AGTTACGTTTCTTAT\n"
+          ]
+        }
+      ],
+      "source": [
+        "def insert_sequence(seq, dna, insert_index = None):\n",
+        "\n",
+        "\n",
+        "    if not insert_index:\n",
+        "        # we need to pick a random spot to insert it that doesn't go over the edge\n",
+        "        insert_location = random.choice(range(0, len(dna) - (len(seq))+1))\n",
+        "    else:\n",
+        "        insert_location = insert_index\n",
+        "\n",
+        "\n",
+        "    left_boundary = 0\n",
+        "    right_boundary = len(dna) - len(seq)\n",
+        "\n",
+        "\n",
+        "    # if it's at the start or the end\n",
+        "    if insert_index == left_boundary:\n",
+        "        left = to_hide\n",
+        "        right = dna[len(to_hide):len(dna)]\n",
+        "        result = \"\".join([left, right])\n",
+        "\n",
+        "\n",
+        "    elif insert_index == right_boundary:\n",
+        "        left = dna[0:right_boundary]\n",
+        "        right = to_hide\n",
+        "        result = \"\".join([left, right])\n",
+        "    \n",
+        "\n",
+        "    # if it's in the middle somewhere\n",
+        "    else:   \n",
+        "        # get the sequence before that insertion point \n",
+        "        before_insertion = dna[0:insert_location]\n",
+        "\n",
+        "        after_insertion = dna[insert_location+len(seq):len(dna)]\n",
+        "\n",
+        "        result =  \"\".join([before_insertion, to_hide, after_insertion])\n",
+        "\n",
+        "\n",
+        "    assert len(result) == len(dna)\n",
+        "\n",
+        "\n",
+        "    return result\n",
+        "\n",
+        "\n",
+        "\n",
+        "before = \"GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\"\n",
+        "\n",
+        "to_hide = \"(THADRYAN)\"\n",
+        "\n",
+        "after = insert_sequence(to_hide, before, 0)\n",
+        "print(\"before: \", before)\n",
+        "print(\"after:    \", after)\n",
+        "\n",
+        "after = insert_sequence(to_hide, before, 30)\n",
+        "print(\"before: \", before)\n",
+        "print(\"after:    \", after)\n",
+        "\n",
+        "after = insert_sequence(to_hide, before)\n",
+        "print(\"before: \", before)\n",
+        "print(\"after:    \", after)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 360,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "True\n"
+          ]
+        }
+      ],
+      "source": [
+        "edge_case1 = \"(THADRYAN)TATACACACTTAGCAAGTTACGTTTCTTAT\"\n",
+        "edge_case2 = \"GCAAGAACTATATACACACTTAGCAAGTTA(THADRYAN)\"\n",
+        "\n",
+        "test_cases = [insert_sequence(to_hide, before) for i in range(10000)]\n",
+        "\n",
+        "print(edge_case1 in test_cases)\n",
+        "print(edge_case2 in test_cases)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
