--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 355,
+      "execution_count": 367,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -29,7 +29,7 @@
               "'Module online'"
             ]
           },
-          "execution_count": 355,
+          "execution_count": 367,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -43,14 +43,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 356,
+      "execution_count": 368,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "GAGACCATACCGTTAGAAAGGATTCGGTACTGCGAGCCTG\n"
+            "TGCGCAGTAAATAACCAGTGTGGGAAGACTGACATTGATG\n"
           ]
         }
       ],
@@ -63,14 +63,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 357,
+      "execution_count": 369,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['GAGA', 'AGAC', 'GACC', 'ACCA', 'CCAT', 'CATA', 'ATAC', 'TACC', 'ACCG', 'CCGT', 'CGTT', 'GTTA', 'TTAG', 'TAGA', 'AGAA', 'GAAA', 'AAAG', 'AAGG', 'AGGA', 'GGAT', 'GATT', 'ATTC', 'TTCG', 'TCGG', 'CGGT', 'GGTA', 'GTAC', 'TACT', 'ACTG', 'CTGC', 'TGCG', 'GCGA', 'CGAG', 'GAGC', 'AGCC', 'GCCT', 'CCTG']\n"
+            "['TGCG', 'GCGC', 'CGCA', 'GCAG', 'CAGT', 'AGTA', 'GTAA', 'TAAA', 'AAAT', 'AATA', 'ATAA', 'TAAC', 'AACC', 'ACCA', 'CCAG', 'CAGT', 'AGTG', 'GTGT', 'TGTG', 'GTGG', 'TGGG', 'GGGA', 'GGAA', 'GAAG', 'AAGA', 'AGAC', 'GACT', 'ACTG', 'CTGA', 'TGAC', 'GACA', 'ACAT', 'CATT', 'ATTG', 'TTGA', 'TGAT', 'GATG']\n"
           ]
         }
       ],
@@ -82,14 +82,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 358,
+      "execution_count": 370,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'GAGA': 1, 'AGAC': 1, 'GACC': 1, 'ACCA': 1, 'CCAT': 1, 'CATA': 1, 'ATAC': 1, 'TACC': 1, 'ACCG': 1, 'CCGT': 1, 'CGTT': 1, 'GTTA': 1, 'TTAG': 1, 'TAGA': 1, 'AGAA': 1, 'GAAA': 1, 'AAAG': 1, 'AAGG': 1, 'AGGA': 1, 'GGAT': 1, 'GATT': 1, 'ATTC': 1, 'TTCG': 1, 'TCGG': 1, 'CGGT': 1, 'GGTA': 1, 'GTAC': 1, 'TACT': 1, 'ACTG': 1, 'CTGC': 1, 'TGCG': 1, 'GCGA': 1, 'CGAG': 1, 'GAGC': 1, 'AGCC': 1, 'GCCT': 1, 'CCTG': 1}\n"
+            "{'TGCG': 1, 'GCGC': 1, 'CGCA': 1, 'GCAG': 1, 'CAGT': 2, 'AGTA': 1, 'GTAA': 1, 'TAAA': 1, 'AAAT': 1, 'AATA': 1, 'ATAA': 1, 'TAAC': 1, 'AACC': 1, 'ACCA': 1, 'CCAG': 1, 'AGTG': 1, 'GTGT': 1, 'TGTG': 1, 'GTGG': 1, 'TGGG': 1, 'GGGA': 1, 'GGAA': 1, 'GAAG': 1, 'AAGA': 1, 'AGAC': 1, 'GACT': 1, 'ACTG': 1, 'CTGA': 1, 'TGAC': 1, 'GACA': 1, 'ACAT': 1, 'CATT': 1, 'ATTG': 1, 'TTGA': 1, 'TGAT': 1, 'GATG': 1}\n"
           ]
         }
       ],
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 359,
+      "execution_count": 371,
       "metadata": {},
       "outputs": [
         {
@@ -114,52 +114,12 @@
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
             "after:     GCAAGAACTATATACACACTTAGCAAGTTA(THADRYAN)\n",
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
-            "after:     GCAAGAACTATATAC(THADRYAN)AGTTACGTTTCTTAT\n"
+            "after:     GCAAGAACTAT(THADRYAN)AGCAAGTTACGTTTCTTAT\n"
           ]
         }
       ],
       "source": [
-        "def insert_sequence(seq, dna, insert_index = None):\n",
         "\n",
-        "\n",
-        "    if not insert_index:\n",
-        "        # we need to pick a random spot to insert it that doesn't go over the edge\n",
-        "        insert_location = random.choice(range(0, len(dna) - (len(seq))+1))\n",
-        "    else:\n",
-        "        insert_location = insert_index\n",
-        "\n",
-        "\n",
-        "    left_boundary = 0\n",
-        "    right_boundary = len(dna) - len(seq)\n",
-        "\n",
-        "\n",
-        "    # if it's at the start or the end\n",
-        "    if insert_index == left_boundary:\n",
-        "        left = to_hide\n",
-        "        right = dna[len(to_hide):len(dna)]\n",
-        "        result = \"\".join([left, right])\n",
-        "\n",
-        "\n",
-        "    elif insert_index == right_boundary:\n",
-        "        left = dna[0:right_boundary]\n",
-        "        right = to_hide\n",
-        "        result = \"\".join([left, right])\n",
-        "    \n",
-        "\n",
-        "    # if it's in the middle somewhere\n",
-        "    else:   \n",
-        "        # get the sequence before that insertion point \n",
-        "        before_insertion = dna[0:insert_location]\n",
-        "\n",
-        "        after_insertion = dna[insert_location+len(seq):len(dna)]\n",
-        "\n",
-        "        result =  \"\".join([before_insertion, to_hide, after_insertion])\n",
-        "\n",
-        "\n",
-        "    assert len(result) == len(dna)\n",
-        "\n",
-        "\n",
-        "    return result\n",
         "\n",
         "\n",
         "\n",
@@ -182,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 360,
+      "execution_count": 372,
       "metadata": {},
       "outputs": [
         {
