--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 367,
+      "execution_count": 373,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -29,7 +29,7 @@
               "'Module online'"
             ]
           },
-          "execution_count": 367,
+          "execution_count": 373,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -43,14 +43,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 368,
+      "execution_count": 374,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "TGCGCAGTAAATAACCAGTGTGGGAAGACTGACATTGATG\n"
+            "CGGGGCTCCTCGGTTACCAAGTTGTATCCTTGCGCACAGT\n"
           ]
         }
       ],
@@ -63,14 +63,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 369,
+      "execution_count": 375,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['TGCG', 'GCGC', 'CGCA', 'GCAG', 'CAGT', 'AGTA', 'GTAA', 'TAAA', 'AAAT', 'AATA', 'ATAA', 'TAAC', 'AACC', 'ACCA', 'CCAG', 'CAGT', 'AGTG', 'GTGT', 'TGTG', 'GTGG', 'TGGG', 'GGGA', 'GGAA', 'GAAG', 'AAGA', 'AGAC', 'GACT', 'ACTG', 'CTGA', 'TGAC', 'GACA', 'ACAT', 'CATT', 'ATTG', 'TTGA', 'TGAT', 'GATG']\n"
+            "['CGGG', 'GGGG', 'GGGC', 'GGCT', 'GCTC', 'CTCC', 'TCCT', 'CCTC', 'CTCG', 'TCGG', 'CGGT', 'GGTT', 'GTTA', 'TTAC', 'TACC', 'ACCA', 'CCAA', 'CAAG', 'AAGT', 'AGTT', 'GTTG', 'TTGT', 'TGTA', 'GTAT', 'TATC', 'ATCC', 'TCCT', 'CCTT', 'CTTG', 'TTGC', 'TGCG', 'GCGC', 'CGCA', 'GCAC', 'CACA', 'ACAG', 'CAGT']\n"
           ]
         }
       ],
@@ -82,14 +82,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 370,
+      "execution_count": 376,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'TGCG': 1, 'GCGC': 1, 'CGCA': 1, 'GCAG': 1, 'CAGT': 2, 'AGTA': 1, 'GTAA': 1, 'TAAA': 1, 'AAAT': 1, 'AATA': 1, 'ATAA': 1, 'TAAC': 1, 'AACC': 1, 'ACCA': 1, 'CCAG': 1, 'AGTG': 1, 'GTGT': 1, 'TGTG': 1, 'GTGG': 1, 'TGGG': 1, 'GGGA': 1, 'GGAA': 1, 'GAAG': 1, 'AAGA': 1, 'AGAC': 1, 'GACT': 1, 'ACTG': 1, 'CTGA': 1, 'TGAC': 1, 'GACA': 1, 'ACAT': 1, 'CATT': 1, 'ATTG': 1, 'TTGA': 1, 'TGAT': 1, 'GATG': 1}\n"
+            "{'CGGG': 1, 'GGGG': 1, 'GGGC': 1, 'GGCT': 1, 'GCTC': 1, 'CTCC': 1, 'TCCT': 2, 'CCTC': 1, 'CTCG': 1, 'TCGG': 1, 'CGGT': 1, 'GGTT': 1, 'GTTA': 1, 'TTAC': 1, 'TACC': 1, 'ACCA': 1, 'CCAA': 1, 'CAAG': 1, 'AAGT': 1, 'AGTT': 1, 'GTTG': 1, 'TTGT': 1, 'TGTA': 1, 'GTAT': 1, 'TATC': 1, 'ATCC': 1, 'CCTT': 1, 'CTTG': 1, 'TTGC': 1, 'TGCG': 1, 'GCGC': 1, 'CGCA': 1, 'GCAC': 1, 'CACA': 1, 'ACAG': 1, 'CAGT': 1}\n"
           ]
         }
       ],
@@ -102,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 371,
+      "execution_count": 377,
       "metadata": {},
       "outputs": [
         {
@@ -114,7 +114,7 @@
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
             "after:     GCAAGAACTATATACACACTTAGCAAGTTA(THADRYAN)\n",
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
-            "after:     GCAAGAACTAT(THADRYAN)AGCAAGTTACGTTTCTTAT\n"
+            "after:     GCAAGAACTATATACACACTTAGC(THADRYAN)TCTTAT\n"
           ]
         }
       ],
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 372,
+      "execution_count": 378,
       "metadata": {},
       "outputs": [
         {
