--- a/jp.ipynb
+++ b/jp.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello?\")"
+    "print(\"Hello JP! You are great!\")"
    ]
   }
  ],
