results to look at later

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 373,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -18,7 +18,7 @@
               "'Module online'"
             ]
           },
-          "execution_count": 373,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -32,14 +32,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 374,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "CGGGGCTCCTCGGTTACCAAGTTGTATCCTTGCGCACAGT\n"
+            "TGACGATGCGGAAGACAACAAGGAGGGACGGAGACCCGAG\n"
           ]
         }
       ],
@@ -52,14 +52,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 375,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['CGGG', 'GGGG', 'GGGC', 'GGCT', 'GCTC', 'CTCC', 'TCCT', 'CCTC', 'CTCG', 'TCGG', 'CGGT', 'GGTT', 'GTTA', 'TTAC', 'TACC', 'ACCA', 'CCAA', 'CAAG', 'AAGT', 'AGTT', 'GTTG', 'TTGT', 'TGTA', 'GTAT', 'TATC', 'ATCC', 'TCCT', 'CCTT', 'CTTG', 'TTGC', 'TGCG', 'GCGC', 'CGCA', 'GCAC', 'CACA', 'ACAG', 'CAGT']\n"
+            "['TGAC', 'GACG', 'ACGA', 'CGAT', 'GATG', 'ATGC', 'TGCG', 'GCGG', 'CGGA', 'GGAA', 'GAAG', 'AAGA', 'AGAC', 'GACA', 'ACAA', 'CAAC', 'AACA', 'ACAA', 'CAAG', 'AAGG', 'AGGA', 'GGAG', 'GAGG', 'AGGG', 'GGGA', 'GGAC', 'GACG', 'ACGG', 'CGGA', 'GGAG', 'GAGA', 'AGAC', 'GACC', 'ACCC', 'CCCG', 'CCGA', 'CGAG']\n"
           ]
         }
       ],
@@ -71,14 +71,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 376,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'CGGG': 1, 'GGGG': 1, 'GGGC': 1, 'GGCT': 1, 'GCTC': 1, 'CTCC': 1, 'TCCT': 2, 'CCTC': 1, 'CTCG': 1, 'TCGG': 1, 'CGGT': 1, 'GGTT': 1, 'GTTA': 1, 'TTAC': 1, 'TACC': 1, 'ACCA': 1, 'CCAA': 1, 'CAAG': 1, 'AAGT': 1, 'AGTT': 1, 'GTTG': 1, 'TTGT': 1, 'TGTA': 1, 'GTAT': 1, 'TATC': 1, 'ATCC': 1, 'CCTT': 1, 'CTTG': 1, 'TTGC': 1, 'TGCG': 1, 'GCGC': 1, 'CGCA': 1, 'GCAC': 1, 'CACA': 1, 'ACAG': 1, 'CAGT': 1}\n"
+            "{'TGAC': 1, 'GACG': 2, 'ACGA': 1, 'CGAT': 1, 'GATG': 1, 'ATGC': 1, 'TGCG': 1, 'GCGG': 1, 'CGGA': 2, 'GGAA': 1, 'GAAG': 1, 'AAGA': 1, 'AGAC': 2, 'GACA': 1, 'ACAA': 2, 'CAAC': 1, 'AACA': 1, 'CAAG': 1, 'AAGG': 1, 'AGGA': 1, 'GGAG': 2, 'GAGG': 1, 'AGGG': 1, 'GGGA': 1, 'GGAC': 1, 'ACGG': 1, 'GAGA': 1, 'GACC': 1, 'ACCC': 1, 'CCCG': 1, 'CCGA': 1, 'CGAG': 1}\n"
           ]
         }
       ],
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 377,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -103,15 +103,11 @@
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
             "after:     GCAAGAACTATATACACACTTAGCAAGTTA(THADRYAN)\n",
             "before:  GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\n",
-            "after:     GCAAGAACTATATACACACTTAGC(THADRYAN)TCTTAT\n"
+            "after:     GC(THADRYAN)TACACACTTAGCAAGTTACGTTTCTTAT\n"
           ]
         }
       ],
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "before = \"GCAAGAACTATATACACACTTAGCAAGTTACGTTTCTTAT\"\n",
         "\n",
         "to_hide = \"(THADRYAN)\"\n",
@@ -131,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 378,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -155,10 +151,58 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "header:  >ENA|U00096|U00096.3 Escherichia coli str. K-12 substr. MG1655, complete genome.\n",
+            "sequence of len:  4641652\n",
+            "first 100:  GCTTTTCATTCTGACTGCAACGGGCAATATGTCTCTGTGTGGATTAAAAAAAGAGTGTCTGATAGCAGCTTCTGAACTGGTTACCTGCCGTGAGTAAAT\n",
+            "last 100:  GGGGCTTTTAGAGCAACGAGACACGGCAATGTTGCACCGTTTGCTGCATGATATTGAAAAAAATATCACCAAATAAAAAACGCCTTAGTAAGTATTTTT\n"
+          ]
+        }
+      ],
+      "source": [
+        "sequence_obj = read_fasta(\"data/U00096.3.fasta\")\n",
+        "name = sequence_obj[\"header\"]\n",
+        "seq = sequence_obj[\"sequence\"]\n",
+        "\n",
+        "print(\"header: \", name)\n",
+        "print(\"sequence of len: \", len(seq))\n",
+        "print(\"first 100: \", seq[1:100])\n",
+        "print(\"last 100: \", seq[-100 : -1])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            ">ENA|U00096|U00096.3 Escherichia coli str. K-12 substr. MG1655, complete genome.\n",
+            "GCTTTTC|<BONG_HITS_4_JESUS>|ATGTCTCTGTGTGGATTAAAAAAAGAGTGTCTGATAGCAGCTTCTGAACTGGTTACCTGCCGTGAGTAAAT\n"
+          ]
+        }
+      ],
+      "source": [
+        "# get a subset of the sequence\n",
+        "seq_subset = seq[1:100]\n",
+        "\n",
+        "# hide a super secret message in the\n",
+        "new_seq = insert_sequence(\"|<BONG_HITS_4_JESUS>|\", seq_subset)\n",
+        "\n",
+        "# make sure we didn't change the length\n",
+        "assert len(seq_subset) == len(new_seq)\n",
+        "\n",
+        "print(name)\n",
+        "print(new_seq)"
+      ]
     }
   ],
   "metadata": {
